[gd_scene load_steps=2 format=3 uid="uid://cfb8cp51xqjwy"]

[ext_resource type="Script" path="res://screens/sub_menus/market_screen/products_container/buy_product_button/buy_product_button.gd" id="1_myiog"]

[node name="BuyProductButton" type="TextureButton"]
custom_minimum_size = Vector2(150, 136)
anchors_preset = -1
anchor_right = 0.078
anchor_bottom = 0.157
offset_right = 0.23999
offset_bottom = 0.439987
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myiog")

[node name="ProductThumbnail" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 155.0
offset_bottom = 140.0
stretch_mode = 3

[node name="ProductLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 142.0
offset_right = 150.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
